--- a/COMP4711/comp4711.html
+++ b/COMP4711/comp4711.html
@@ -30,6 +30,10 @@
             <li><a href="https://iris98lau.herokuapp.com/">Time Stamp</a></li>
         </ul>
     </li>
+    li>Lab 6
+        <ul>
+            <li><a href="labs/6/Quiz/admin.html">Quiz Generator</a></li>
+        </ul>
     <!-- <li></li> -->
 
 </ul>
