--- a/COMP4711/labs/6/Quiz/user.html
+++ b/COMP4711/labs/6/Quiz/user.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <script src="../../../Javascript/quizGeneratorUser2.js"></script>
+    <script src="../../../../Javascript/quizGeneratorUser2.js"></script>
     
 </body>
 </html>
