--- a/COMP4711/labs/6/Quiz/user.html
+++ b/COMP4711/labs/6/Quiz/user.html
@@ -3,9 +3,9 @@
 <head>
     <title>Quiz User</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="../../../Style/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="../../../Style/style.css">
-    <script src="../../../Javascript/jquery-3.2.1.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../../../Style/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../../../../Style/style.css">
+    <script src="../../../../Javascript/jquery-3.2.1.min.js"></script>
 </head>
 <body>
 
