--- a/COMP4711/comp4711.html
+++ b/COMP4711/comp4711.html
@@ -30,15 +30,11 @@
             <li><a href="https://iris98lau.herokuapp.com/">Time Stamp</a></li>
         </ul>
     </li>
-    <li>
-        <a href="labs/5/app.js">Lab5 Time</a>
-    </li>
-    <li>Lab 6
+    <li>Lab 7
         <ul>
-            <li><a href="labs/6/Quiz/admin.html">Quiz Generator</a></li>
+            <li><a href="labs/7/api/api.html">Youtube api</a></li>
         </ul>
     </li>
-    <!-- <li></li> -->
 
 </ul>
 
